--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+spring.datasource.url=jdbc:h2:file:~/DB_BA_Trading;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.path=/h2
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.flyway.baseline-on-migrate = true
+#spring.h2.console.enabled=true
+#spring.jpa.show-sql=true
+server.servlet.session.timeout=86400s
+#spring.session.timeout=86400s
