--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:h2:file:~/DB_BA_Trading;DB_CLOSE_ON_EXIT=TRUE;AUTO_RECONNECT=TRUE
+spring.liquibase.change-log=classpath:db/changelog/master.xml
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
