--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.path=/h2
 server.servlet.session.timeout=86400s
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 #spring.flyway.baseline-on-migrate = true
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
