--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
 #spring.session.timeout=86400s
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
