--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:h2:file:~/DB_BA_Trading;DB_CLOSE_ON_EXIT=TRUE;AUTO_RECONNECT=TRUE
+#spring.datasource.url=jdbc:h2:mem:testdb
 spring.liquibase.change-log=classpath:db/changelog/master.xml
 spring.datasource.username=admin
 spring.datasource.password=password
@@ -6,7 +7,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.path=/h2
 server.servlet.session.timeout=86400s
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
-#spring.flyway.baseline-on-migrate = true
 #spring.h2.console.enabled=true
 #spring.jpa.show-sql=true
 #spring.session.timeout=86400s
