--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>deeplearning4j-core</artifactId>
             <version>1.0.0-beta7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.n52.matlab/matlab-control -->
+        <dependency>
+            <groupId>org.n52.matlab</groupId>
+            <artifactId>matlab-control</artifactId>
+            <version>5.0.0</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
